--- a/lection04/docker-compose.yaml
+++ b/lection04/docker-compose.yaml
@@ -1,12 +1,14 @@
-postgres:
-  image: postgres:12
-  environment:
-    POSTGRES_USER: user
-    POSTGRES_PASSWORD: passwd
-    POSTGRES_DB: fintech
-    PGDATA: /data/postgres
-  volumes:
-    - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    - ./postgres:/data/postgres
-  ports:
-    - "5442:5432"
+version: "3.9"
+services:
+  postgres:
+    image: postgres:12
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: passwd
+      POSTGRES_DB: fintech
+      PGDATA: /data/postgres
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./postgres:/data/postgres
+    ports:
+      - "5442:5432"
